deploy/overlays/sandbox/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weit-api-ingress
  namespace: sandbox
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: sandbox.jayden-bin.kro.kr
    http:
      paths:
      - path: /
        backend:
          service:
            name: weit-api-svc
            port:
              number: 443
  tls:
    - hosts:
        - sandbox.jayden-bin.kro.kr
      secretName: star-jayden-bin-kro-kr
